// Copyright (c) 2022 Project Illium
// Use of this source code is governed by an MIT
// license that can be found in the LICENSE file.

syntax = "proto3";
option go_package = "../wire";

import "transactions.proto";

enum ErrorResponse {
    None     = 0;
    NotFound = 1;
}

message MsgAvaRequest {
    uint32 requestID    = 1;
    repeated bytes invs = 2;
}

message MsgAvaResponse {
    uint32 requestID = 1;
    bytes votes      = 2;
}

message MsgGetBlockTxs {
    bytes blockID              = 1;
    repeated uint32 txIndexes  = 2;
}

message BlockTxs {
    repeated Transaction transactions = 1;
    ErrorResponse error               = 2;
}

message MsgGetBlockTxids {
    bytes blockID              = 1;
}

message BlockTxids {
    repeated bytes txids = 1;
    ErrorResponse error  = 2;
}